[package]
name = "ao3_embed"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { git = "https://github.com/djc/askama.git", rev = "32f0799" }
axum = { version = "0.6", features = ["headers", "original-uri"] }
isbot = "0.1.3"
minify-html = "0.10.8"
thiserror = "1.0.38"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tower-http = { version = "0.3", features = ["normalize-path"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
moka = { version = "0.10.0", default-features = false, features = ["future"] }
once_cell = "1.17.1"
nom = "7.1.3"
lazy_static = "1.4.0"
scraper = "0.14.0"
serde_json = "1.0.93"
urlencoding = "2.1.2"
itertools = "0.10.5"
